# Jessica.ai

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  results.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  LandingPage.jsx
server/: __init__.py  app.py  legal_auditor_env_environment.py  oracle.py  pdf_generator.py  user_report_generator.py
